--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=backendapi
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+upload.directory=uploads/profile_pictures
